--- a/Model Deployment/.streamlit/config.toml
+++ b/Model Deployment/.streamlit/config.toml
@@ -1,4 +1,11 @@
 [server]
 headless = true
-enableCORS = false
 port = $PORT
+enableCORS = false
+
+[theme]
+primaryColor = "#4CAF50"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+font = "sans serif"
